Changes to be committed: 	modified:   apibanco/src/main/java/com/fc/apibanco/controller/ArchivoController.java 	new file:   apibanco/src/main/java/com/fc/apibanco/dto/TipoDocumentoStatusDTO.java 	modified:   apibanco/src/main/java/com/fc/apibanco/repository/MetadataRepository.java 	modified:   apibanco/src/main/java/com/fc/apibanco/security/JwtTokenProvider.java